--- a/public/css/jquery.pagepiling.css
+++ b/public/css/jquery.pagepiling.css
@@ -48,8 +48,8 @@ html, body {
     display: table;
 }
 .pp-tableCell {
-    display: table-cell;
-    vertical-align: middle;
+   /*display: table-cell;
+    vertical-align: middle;*/
     width: 100%;
     height: 100%;
 }
