--- a/public/css/farbtastic.css
+++ b/public/css/farbtastic.css
@@ -16,6 +16,16 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
  */
+.lazyloadexample
+{
+  float:left;
+  border:1px solid black;
+  border-radius:10px;
+  padding-bottom: 1%;
+  padding-left: 1%;
+  width:20%;
+  margin-left:2%;
+}
 .farbtastic {
   position: relative;
 }
