--- a/public/css/admin2.css
+++ b/public/css/admin2.css
@@ -1,7 +1,21 @@
+body {
+    overflow: auto!important;
+    width: auto!important;
+}
+
 #imagePreview {
-    display: none;
+    position: relative;
     width: 20%;
-    width: 20%;
+}
+
+#imagePreview span {
+    position: absolute;
+    padding-left: 90%;
+    cursor: pointer;
+}
+
+#imagePreview span:hover {
+    color: grey;
 }
 
 #imagePreview img {
@@ -14,8 +28,11 @@
     display: none;
 }
 
-.indexCarousel
-{
+.indexCarousel {
     padding-top: 40%;
     padding-bottom: 40%;
+}
+
+.collapsible-body {
+    padding: 5px;
 }
