fix and add generalsettings

--- a/public/css/admin2.css
+++ b/public/css/admin2.css
@@ -5,6 +5,7 @@ body {
 
 #imagePreview {
     position: relative;
+    display: none;
     width: 20%;
 }
 
@@ -35,4 +36,8 @@ body {
 
 .collapsible-body {
     padding: 5px;
+}
+
+#closeBar {
+    cursor: pointer;
 }
